Converted to promises

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <span id="result">...</span> with a confidence of
     <span id="probability">...</span></p>
 
-    <img src="./assets/parrot.jpg"
+    <img src="./assets/bird1.jpg"
      crossorigin="anonymous" id="image1" width="400" onclick="birdClicked('image1')">
 
 
@@ -20,6 +20,8 @@
 
       <img src="./assets/bird3.jpg"
        crossorigin="anonymous" id="image3" width="400" onclick="birdClicked('image3')">
+
+       <h3>Click on image</h3>
     <script>
 
     function birdClicked(name){
@@ -27,14 +29,20 @@
       const result = document.getElementById('result');
       const probability = document.getElementById('probability');
 
-      const classifier = ml5.imageClassifier('MobileNet', function() {
-        console.log('Model Loaded!');
-      });
+      // const classifier = ml5.imageClassifier('MobileNet', function() {
+      //   console.log('Loaded model successfully');
+      // });
 
-      classifier.predict(image, function(err, results) {
-        result.innerText = results[0].className;
-        probability.innerText = results[0].probability.toFixed(4);
-      });
+      // classifier.predict(image, function(err, results) {
+      //   result.innerText = results[0].className;
+      //   probability.innerText = results[0].probability.toFixed(4);
+      // });
+
+ml5.imageClassifier('MobileNet').then(classifier => classifier.predict(image)).then(results => {
+    result.innerText = results[0].className;
+    probability.innerText = results[0].probability.toFixed(4);
+});
+
     }
 
 
