--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <title>Getting Started with ml5.js</title>
+      <title>Birds</title>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
       <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
     </head>
   <body>
-    <h1>Image classification using MobileNet</h1>
-    <p>The MobileNet model labeled this as
+    <p>
     <span id="result">...</span> with a confidence of
     <span id="probability">...</span></p>
 
