--- a/feature.html
+++ b/feature.html
@@ -10,12 +10,15 @@
   <body>
     <p>
       Result :
+      <!-- Result will be displayed in red color -->
 <span id="result" style="color: #ff0000">...</span>
 <p>
 With a confidence of :
+<!-- confidence will be displayed in Green Color -->
 <span id="probability" style="color: #00ff00">...</span>
 </p>
 Status :
+<!-- Status will be displayed in Blue color -->
 <span id="status" style="color: #0000ff">..</span>
 </p>
 <script>
