Added red color to staus

--- a/sketchRNN.html
+++ b/sketchRNN.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <p id="status">Model Loading</p>
+    <p id="status" style="color: #ff0000">Model Loading</p>
     <button type="button" name="draw" id="draw" > Draw</button>
     <script>
 let model;
