--- a/rockpaper.html
+++ b/rockpaper.html
@@ -8,6 +8,10 @@
     <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
   </head>
   <body>
+    <p id="status">...</p>
+<button type="button" id="addClassRock" name="button">Add a Rock Example</button><span id="exampleRock">...</span> Trained <br>
+<button type="button" id="addClassPaper" name="button">Add a Paper Example</button><br>
+<button type="button" id="addClassScissor" name="button">Add a Scissor Example</button><br>
 
     <script>
       let video;
@@ -23,7 +27,7 @@
   }
 
   function modelReady(){
-    select('#status').html('FeatureExtractor(mobileNet model) Loaded')
+    select('#status').html('Model Loaded!')
   }
   function addExample(label) {
     const features = featureExtractor.infer(video);
@@ -42,106 +46,6 @@
     knnClassifier.classify(features, gotResults);
   }
 
-  function createButtons() {
-
-    buttonA = select('#addClassRock');
-    buttonA.mousePressed(function() {
-      addExample('Rock');
-    });
-
-    buttonB = select('#addClassPaper');
-    buttonB.mousePressed(function() {
-      addExample('Paper');
-    });
-
-    buttonC = select('#addClassScissor');
-    buttonC.mousePressed(function() {
-      addExample('Scissor');
-    });
-
-    resetBtnA = select('#resetRock');
-    resetBtnA.mousePressed(function() {
-      clearLabel('Rock');
-    });
-
-    resetBtnB = select('#resetPaper');
-    resetBtnB.mousePressed(function() {
-      clearLabel('Paper');
-    });
-
-    resetBtnC = select('#resetScissor');
-    resetBtnC.mousePressed(function() {
-      clearLabel('Scissor');
-    });
-
-    buttonPredict = select('#buttonPredict');
-    buttonPredict.mousePressed(classify);
-
-
-    buttonClearAll = select('#clearAll');
-    buttonClearAll.mousePressed(clearAllLabels);
-
-    buttonSetData = select('#load');
-    buttonSetData.mousePressed(loadMyKNN);
-
-
-    buttonGetData = select('#save');
-    buttonGetData.mousePressed(saveMyKNN);
-  }
-
-
-  function gotResults(err, result) {
-
-    if (err) {
-      console.error(err);
-    }
-
-    if (result.confidencesByLabel) {
-      const confidences = result.confidencesByLabel;
-
-      if (result.label) {
-        select('#result').html(result.label);
-        select('#confidence').html(`${confidences[result.label] * 100} %`);
-      }
-
-      select('#confidenceRock').html(`${confidences['Rock'] ? confidences['Rock'] * 100 : 0} %`);
-      select('#confidencePaper').html(`${confidences['Paper'] ? confidences['Paper'] * 100 : 0} %`);
-      select('#confidenceScissor').html(`${confidences['Scissor'] ? confidences['Scissor'] * 100 : 0} %`);
-    }
-
-    classify();
-  }
-
-
-  function updateCounts() {
-    const counts = knnClassifier.getCountByLabel();
-
-    select('#exampleRock').html(counts['Rock'] || 0);
-    select('#examplePaper').html(counts['Paper'] || 0);
-    select('#exampleScissor').html(counts['Scissor'] || 0);
-  }
-
-
-  function clearLabel(label) {
-    knnClassifier.clearLabel(label);
-    updateCounts();
-  }
-
-
-  function clearAllLabels() {
-    knnClassifier.clearAllLabels();
-    updateCounts();
-  }
-
-
-  function saveMyKNN() {
-    knnClassifier.save('myKNNDataset');
-  }
-
-
-  function loadMyKNN() {
-    knnClassifier.load('./myKNNDataset.json', updateCounts);
-  }
 
     </script>
   </body>
