--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
       <title>Birds</title>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+    <!--CDN for ML5  -->
       <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
     </head>
   <body>
     <p>
+      <!-- Result  -->
     <span id="result">...</span> with a confidence of
+    <!--  confidence of prediction-->
     <span id="probability">...</span></p>
 
     <img src="./assets/bird1.jpg"
